kustomize/base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: http
      targetPort: 8081
      port: 80
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-canary
spec:
  ports:
    - name: http
      targetPort: 8081
      port: 80
  selector:
    app: backend
